# ITK-CLIs

./: .dockerignore  .gitattributes  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  LabelShiftImageFilter.cxx  RGB2grey.cxx  RGB2vec.cxx  X_bin_para.cxx  add.cxx  add_const.cxx  analyse_binary.cxx  analyse_labels.cxx  anisoDiff-LBR.cxx  anisoDiff-curv-flow.cxx  anisoDiff-curv.cxx  anisoDiff-grad.cxx  anisoDiff-grad_GPU.cxx  anisoDiff-grad_vec.cxx  anti-alias.cxx  bin.cxx  bin_series.cxx  change_header.cxx  channel_extract.cxx  close_bin_morph.cxx  close_bin_morph_SDI.cxx  close_bin_para.cxx  close_parabolic.cxx  closing_bin_morph.cxx  closing_bin_morph_SDI.cxx  count_neighbours.cxx  curv_flow.cxx  dilate_bin.cxx  dilate_gray.cxx  dilate_parabolic.cxx  distance_map_parabolic.cxx  distance_map_signed_maurer.cxx  erode-dilate_dm.cxx  erode_bin.cxx  (+112 more)
IJ-Vessel_Enhancement_Diffusion.1/: itkAnisotropicDiffusionVesselEnhancementImageFilter.txx  itkMultiScaleHessianSmoothed3DToVesselnessMeasureImageFilter.txx
filter/internal/: itkConstGradientDescentOptimizer.cxx  itkInverseGradientDescentOptimizer.cxx  itkInverseGradientDescentOptimizer.h
filter/self-made/: itkLabelShiftImageFilter.cxx  itkLabelShiftImageFilter.h  itkLabelShiftImageFilter.hxx  itkROIShiftScaleImageFilter.cxx  itkROIShiftScaleImageFilter.h  itkROIShiftScaleImageFilter.hxx  itkScaleShiftImageFilter.h  itkScaleShiftImageFilter.hxx
tests/data/: ACN_speed.mhd  mosaic-color.mhd  seed.mha  srv_z@02356.mha  test.dm3
tests/min-path_fm/manual/: cmds
tests/min-path_seg/manual/: ACN.mha
tests/prune_ends/: cmds  sheet-flow_vo-skel_pe.mha
tests/res/thresh-erase/: output.mhd
tests/vo2ve/: cmds  sheet-flow_vo-skel.mha  sheet-flow_vo-skel_pe.mha
